# MEMI-OS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  mime-os
include/: PCB.hpp  Process.hpp
include/fileSystem/: Directory.hpp  FSNode.hpp  File.hpp  FileSystem.hpp  Permissions.hpp
include/hardware/: CPU.hpp  RAM.hpp  Types.hpp
include/kernel/logging/: Logger.hpp
include/memory/: Block.hpp  MemoryManager.hpp
include/process/: Process.hpp  ProcessManager.hpp  Scheduler.hpp
include/shell/: Commands.hpp  Shell.hpp
include/user/: User.hpp
include/utils/: StringUtils.hpp
src/: main.cpp
src/hardware/: CPU.cpp  RAM.cpp
src/kernel/filesystem/: Directory.cpp  File.cpp  FileSystem.cpp
src/kernel/logging/: Logger.cpp
src/kernel/memory/: MemoryManager.cpp
src/kernel/process/: Process.cpp  ProcessManager.cpp  Scheduler.cpp
src/shell/: Commands.cpp  Shell.cpp
src/utils/: StringUtils.cpp
tests/hardware/: test_CPU.cpp  test_RAM.cpp
